# ocaml-rust

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: workflow.yml
example/: Cargo.toml
example-arrow/: Cargo.toml
example-arrow/src/: lib.rs
example/src/: lib.rs
macro/: Cargo.toml  README.md
macro/src/: lib.rs
src/: bigarray.rs  closure.rs  custom.rs  error.rs  exn.rs  from_value.rs  gc.rs  lib.rs  rooted.rs  to_value.rs  value.rs
syntax/: api.rs  error.rs  expand.rs  file.rs  mod.rs
tests/: test.rs
tests/arrow/: README.md  arrow_cmd.ml  arrow_core.ml  arrow_core.mli  arrow_gen.ml  arrow_test.ml  arrow_test.mli  dune  test.parquet
tests/basic/: test.ml  test_cmd.ml  test_gen.ml
tests/ocaml/: Makefile  arrow_cmd.ml  arrow_gen.ml  arrow_test.ml  dune  test.ml  test_gen.ml
