[package]
name = "ocaml-rust"
version = "0.0.1"
edition = "2021"
authors = ["Laurent Mazare <lmazare@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/LaurentMazare/ocaml-rust"
exclude = ["/example", "/gen"]

[dependencies]
ocaml-sys = "0.22.2"
ocaml-boxroot-sys = "0.2.0"
ocaml-rust-macro = { version = "0.0.1", path = "macro" }
thiserror = "1"
libc = "0.2.122"

[workspace]
members = ["example", "gen/cmd", "macro"]

[patch.crates-io]
ocaml-rust = { path = "." }
