[package]
name = "ocaml-rust-macro"
version = "0.0.1"
authors = ["Laurent Mazare <lmazare@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0.4"
syn = { version = "1.0.70", features = ["full", "printing"] }
thiserror = "1"
