(library
 (name arrow_lib)
 (modules arrow_core arrow_gen arrow_test)
 (foreign_archives ocaml_rust_arrow)
 (libraries core core_unix.time_ns_unix sexplib stdio)
 (inline_tests)
 (preprocess (pps ppx_expect ppx_sexp_conv ppx_sexp_message))
 (c_library_flags (-lpthread -lc -lm)))

(executable
 (name arrow_cmd)
 (modules arrow_cmd)
 (libraries arrow_lib base sexplib stdio)
 (preprocess (pps ppx_sexp_conv)))
