(library
 (name test_lib)
 (modules test test_gen)
 (foreign_archives ocaml_rust_example)
 (libraries base sexplib stdio)
 (inline_tests)
 (preprocess (pps ppx_expect ppx_sexp_conv))
 (c_library_flags (-lpthread -lc -lm)))

(executable
 (name test_cmd)
 (modules test_cmd)
 (libraries base sexplib stdio test_lib)
 (preprocess (pps ppx_expect ppx_sexp_conv)))

(library
 (name arrow_gen)
 (modules arrow_gen)
 (foreign_archives ocaml_rust_arrow)
 (libraries base sexplib stdio)
 (preprocess (pps ppx_sexp_conv))
 (c_library_flags (-lpthread -lc -lm)))

(executable
 (name arrow_cmd)
 (modules arrow_cmd)
 (libraries arrow_gen base sexplib stdio)
 (preprocess (pps ppx_sexp_conv)))
